# llm-eval-playground

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/llm_eval/: adapters.py  llm_judge.py  rubric.py  runner.py
tests/: test_adapters.py  test_llm_judge.py  test_rubric.py  test_runner.py
